# Jikken5

./: .gitignore  README.md  aaa.py  commons.py  data_utils.py  filelistcreator.py  filelistschanger.py  filenamechanger.py  inference.ipynb  inference.py  losses.py  mel_processing.py  models.py  mp3towav.py  pyproject.toml  run_python_code.ipynb  train.py  transform.py
.ipynb_checkpoints/: run_python_code-checkpoint.ipynb
configs/: ljs_base.json  ljs_nosdp.json  vctk_base.json
filelists/: OLDljs_audio_test_filelist.txt  ljs_audio_filelist.txt  ljs_audio_test_filelist.txt  ljs_audio_val_filelist.txt
jikken/: pyproject.toml
